--- a/create-element.html
+++ b/create-element.html
@@ -5,7 +5,10 @@
     <div id="root"></div>
     <script type="text/babel">
         const rootElement = document.getElementById("root");
-        const element = <div className="container">Hello World</div>
+        const children = 'Hello World';
+        const className = 'container';
+        const props = {children, className};
+        const element = <div {...props} />
         console.log(element);
         ReactDOM.render(element, rootElement);
     </script>
